--- a/Pastillero/AndroidManifest.xml
+++ b/Pastillero/AndroidManifest.xml
@@ -8,8 +8,8 @@
         android:minSdkVersion="14"
         android:targetSdkVersion="19" />
 
-    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
-    
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -34,13 +34,23 @@
             android:windowSoftInputMode="stateAlwaysVisible" >
         </activity>
 
-        <receiver android:name=".BootCompletedIntentReceiver" >
+        <receiver
+            android:name="com.mikesaurio.pastillero.broadcast.BootCompletedIntentReceiver"
+            android:enabled="true"
+            android:exported="true"
+            android:permission="android.permission.RECEIVE_BOOT_COMPLETED" >
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
+
+                <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </receiver>
-        
-        <service android:name="com.mikesaurio.pastillero.servicio.servicio_alarma"></service>
+
+        <service
+            android:name="com.mikesaurio.pastillero.servicio.servicio_alarma"
+            android:enabled="true"
+            android:exported="true" >
+        </service>
     </application>
 
 </manifest>
