--- a/Pastillero/bin/AndroidManifest.xml
+++ b/Pastillero/bin/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:targetSdkVersion="19" />
 
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
-    <uses-permission android:name="android.permission.VIBRATE"/>
+    <uses-permission android:name="android.permission.VIBRATE" />
 
     <application
         android:allowBackup="true"
@@ -17,10 +17,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.mikesaurio.pastillero.fragments.DashboardFragment"
-            android:label="@string/app_name" />
-        <activity
-            android:name="com.mikesaurio.pastillero.PastilleroActivity"
+            android:name="com.mikesaurio.pastillero.splash.SplashActivity"
             android:label="@string/app_name"
             android:theme="@style/Theme.AppCompat.Light.DarkActionBar" >
             <intent-filter>
@@ -29,6 +26,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name="com.mikesaurio.pastillero.PastilleroActivity"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.AppCompat.Light.DarkActionBar" >
+        </activity>
+        <activity
+            android:name="com.mikesaurio.pastillero.fragments.DashboardFragment"
+            android:label="@string/app_name" />
         <activity
             android:name="com.mikesaurio.pastillero.dialogos.DatosDialogActivity"
             android:theme="@android:style/Theme.Holo.Light.Dialog"
