--- a/Pastillero/AndroidManifest.xml
+++ b/Pastillero/AndroidManifest.xml
@@ -57,6 +57,11 @@
             android:enabled="true"
             android:exported="true" >
         </service>
+        <service
+            android:name=".servicio.servicio_citas"
+            android:enabled="true"
+            android:exported="true" >
+        </service>
 
         <activity
             android:name="com.mikesaurio.pastillero.dialogos.CitasDialogActivity"
